# school_x-lectures

async_agents/: main.py  pyproject.toml  task.ipynb
browser-use-agent/: main.py  mcp_server.py  pyproject.toml  task.ipynb
browser-use-agent/default/: main.py
lecture_2/: branching.py  fancy.py  main.py  operations.py  pyproject.toml  task.ipynb  task.py
lecture_3/: pyproject.toml  task.ipynb  task2.py
lecture_4/: main.py  pyproject.toml  task.ipynb  task.py
lecture_5/: myfunction.ipynb  myfunction.py  pyproject.toml  task2.ipynb
lecture_6/: pyproject.toml  task.ipynb  task2.py
lecture_7/: README.md  class.py  complex.py  pyproject.toml  task.ipynb  task.py
lecture_8/: linear_regression.ipynb  pyproject.toml
lecture_9/: main.py  pyproject.toml  task.ipynb
lecture_agents/: pyproject.toml
lecture_agents/src/: main.py
lecture_guardrails/: agno.db  main.py  pyproject.toml  settings.py  task.ipynb  task_agno.ipynb  task_agno.py
lecture_llm_api/: .env.example  pyproject.toml  task.ipynb
lecture_llm_api/common/: settings.py
lecture_llm_api/src/: main.py
parsers/: get_urls.py  main.py  news-list.json  parse.py  pyproject.toml  text.html  text.txt
parsers/data/: 20250930.json
parsers/schemas/: schemas.py
search_agent/: data.db  pyproject.toml  task.ipynb  test.py
tokens_homework/: NLP_Embeddings_Intro_Practical.ipynb  NLP_Embeddings_PyTorch_Practical.ipynb  book.txt  gensim.ipynb  main.py  pyproject.toml  syntax_analyze.ipynb  tokens.ipynb
