[project]
name = "browser-use-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.3.12",
    "browser-use[cli]>=0.11.1",
    "browser-use-sdk>=2.0.12",
    "fastapi[standard]>=0.124.4",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain-openai>=1.1.3",
    "mcp>=1.24.0",
    "openai>=2.11.0",
    "openrouter>=0.1.1",
    "requests>=2.32.5",
    "playwright>=1.57.0",
    "nest-asyncio>=1.6.0",
]
