[project]
name = "lecture-guardrails"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.3.9",
    "ddgs>=9.9.3",
    "duckduckgo-search>=8.1.1",
    "fastapi[standard]>=0.124.0",
    "guardrails-ai>=0.7.0",
    "ipykernel>=7.1.0",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "openrouter>=0.1.1",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.44",
]
