[project]
name = "lecutre-llm-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.0.1",
    "openai>=2.6.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "rich>=14.2.0",
]
