[project]
name = "parsers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "pydantic>=2.12.2",
    "requests>=2.32.5",
    "xmltodict>=1.0.2",
]

[tool.uv.sources]
pydantic = { git = "https://github.com/pydantic/pydantic", rev = "main" }
