[project]
name = "search-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.3.10",
    "asyncio>=4.0.0",
    "ddgs>=9.9.3",
    "fastapi[standard]>=0.124.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "mcp>=1.23.3",
    "nest-asyncio>=1.6.0",
    "openai>=2.9.0",
    "openrouter>=0.1.1",
    "sqlalchemy>=2.0.45",
]
