[project]
name = "tokens-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.3",
    "ipykernel>=6.30.1",
    "nltk>=3.9.2",
    "pip>=25.2",
    "spacy>=3.8.7",
    "torch>=2.9.0",
]

[tool.uv.workspace]
members = [
    "ipykernel",
]
